syntax = "proto3";

package foodserver;

option java_multiple_files = true;
option java_package = "pt.ulisboa.tecnico.cmov.foodservice";

message Empty {}

message FoodService {
    string name = 1;
    string openingHours = 2;
    int64 queueTime = 3;
    double latitude = 4;
    double longitude = 5;
}

message GetDishRequest {
    string foodServiceName = 1;
}

message Dish {
    string name = 1;
    int64 price = 2;
}

service FoodServer {
    rpc getFoodServices(Empty) returns (stream FoodService);
    rpc getDishes(GetDishRequest) returns (stream Dish);
}
